--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.17"
+    "@astrojs/preact": "^2.0.3",
+    "@astrojs/rss": "^2.1.1",
+    "astro": "^2.0.17",
+    "preact": "^10.6.5"
   }
 }
